--- a/index.html
+++ b/index.html
@@ -7,10 +7,45 @@
     <link rel="stylesheet" href="./assets/css/reset.css">
     <!-- style css -->
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- font size -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&family=Sen:wght@400..800&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
-<body>
-    <h1>figma to HTML</h1>
-    <h2>demo</h2>
+<body style="height: 10000px;">
+    <!-- header -->
+     <header class="header fixed">
+        <div class="main-content">
+            <div class="body">
+                <!-- logo -->
+                <img src="./assets/image/Lesson..svg" alt="lesson" class="logo">
+
+                <!-- nav -->
+                 <nav class="nav">
+                    <ul>
+                        <li class="active">
+                            <a href="#!">Home</a>
+                        </li>
+                        <li>
+                            <a href="#!">Courses</a>
+                        </li>
+                        <li>
+                            <a href="#!">Pricing</a>
+                        </li>
+                        <li>
+                            <a href="#!">Reviews</a>
+                        </li>
+                    </ul>
+                 </nav>
+                 <!-- btn action -->
+                  <div class="action">
+                    <a href="#!" class="btn btn-sign-up">Sign Up</a>
+                  </div>
+                  
+                
+            </div>
+        </div>
+     </header>
 </body>
 </html>
