--- a/index.html
+++ b/index.html
@@ -118,5 +118,97 @@
             </div>
         </div>
       </div>
+
+      <!-- popular -->
+    <div class="popular">
+        <div class="main-content">
+            <!-- popular top -->
+             <div class="popular-top">
+                <!-- top left -->
+                <div class="info">
+                    <h2 class="heading-lv2">Our popular courses</h2>
+                    <p class="desc">Build new skills with new trendy courses and shine for the next future career.</p>
+                </div>
+                <!-- top right -->
+                 <div class="control">
+                    <button class="control-btn">
+                        <img src="./assets/icon/control-left.png" alt="">
+                    </button>
+                    <button class="control-btn">
+                        <img src="./assets/icon/control-right.png" alt="">
+                    </button>
+                 </div>
+
+             </div>
+            <!--popular bottom  -->
+            <div class="course-list">
+                <!-- item 1 -->
+                <div class="course-item">
+                    <a href="#!"><img src="./assets/image/course1.png" alt="" class="thumb">
+                    </a>
+                    <div class="info">
+                        <div class="head">
+                            <h3 class="title"><a href="#!" class="line-clamp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam mollitia eligendi, aperiam sapiente quos recusandae, blanditiis repellat distinctio dolorum molestias expedita atque. Culpa, libero! Dolores aliquam eos repudiandae minus eveniet?
+                            Delectus atque deleniti velit reprehenderit consequuntur temporibus ab at, porro voluptatibus? Itaque, reprehenderit. Ex, vitae sapiente ut sint optio praesentium dolor asperiores, nostrum est voluptatibus quod reprehenderit molestias inventore commodi.
+                            Culpa optio nemo asperiores deserunt possimus necessitatibus eius aut ullam similique architecto magnam nobis velit beatae, perspiciatis nesciunt totam facere at reiciendis deleniti. Voluptates ipsa earum corporis eligendi excepturi aperiam!
+                            Eaque atque dolorum recusandae fuga quidem! Assumenda, similique aut atque nisi in maiores iure corrupti, nesciunt a odio itaque libero nostrum alias doloribus voluptatum facilis voluptate quas quisquam sunt excepturi?
+                            Ad eius deleniti optio alias accusamus nulla iure porro ex aspernatur voluptas at doloremque debitis, eligendi quas facilis inventore cum rem officiis assumenda totam vero temporibus tempore. Inventore, eum magnam!</a></h3>
+                            <div class="rating">
+                                <img src="./assets/icon/Star 6.svg" alt="" class="start">
+                                <span class="value">4.5</span>
+                            </div>
+                        </div>
+                        <p class="desc">
+                            Get the best course, gain knowledge and shine for your future career.
+                        </p>
+                        <div class="foot">
+                            <span class="price">$120.75</span>
+                            <button class="btn btn-book-now">Book Now</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- item 2 -->
+                <div class="course-item">
+                    <img src="./assets/image/course2.png" alt="UI/UX design" class="thumb">
+                    <div class="info">
+                        <div class="head">
+                            <h3 class="title">UI/UX design</h3>
+                            <div class="rating">
+                                <img src="./assets/icon/Star 6.svg" alt="" class="start">
+                                <span class="value">4.5</span>
+                            </div>
+                        </div>
+                        <p class="desc">
+                            Get the best course, gain knowledge and shine for your future career.
+                        </p>
+                        <div class="foot">
+                            <span class="price">$120.75</span>
+                            <button class="btn btn-book-now">Book Now</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- item 3 -->
+                <div class="course-item">
+                    <img src="./assets/image/course3.png" alt="Web App design" class="thumb">
+                    <div class="info">
+                        <div class="head">
+                            <h3 class="title">Web App design</h3>
+                            <div class="rating">
+                                <img src="./assets/icon/Star 6.svg" alt="" class="start">
+                                <span class="value">4.5</span>
+                            </div>
+                        </div>
+                        <p class="desc">
+                            Get the best course, gain knowledge and shine for your future career.
+                        </p>
+                        <div class="foot">
+                            <span class="price">$120.75</span>
+                            <button class="btn btn-book-now">Book Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
