--- a/index.html
+++ b/index.html
@@ -210,5 +210,82 @@
             </div>
         </div>
     </div>
+    <!-- feedback -->
+     <div class="feedback">
+        <div class="main-content">
+            <div class="feedback-list">
+                <div class="feedback-item">
+                    <!-- khoi ben trai -->
+                        <div class="info">
+                            <img src="./assets/image/emiu.jpg" alt="" class="avatar">
+                            <p class="member-name">Peter Moor</p>
+                            <p class="desc">Student of Web Design</p>
+                            <div class="dots">
+                                <span class="dot"></span>
+                                <span class="dot"></span>                                   
+                                <span class="dot"></span>
+                            </div>
+                        </div>
+
+                     <!-- Khoi ben phai -->
+                        <div class="content">
+                            <img src="./assets/icon/quost.svg" alt="" class="open">
+                            <blockpost>Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these 
+                                certificates also bring me closer to my career goals by validating the skills I've learned." </blockpost>
+                        </div>
+                </div>
+            </div>
+        </div>
+     </div>
+     <!-- features -->
+      <div class="features">
+        <div class="main-content">
+            <div class="body">
+                <div class="images">
+                    <img class="lower" src="./assets/image/course2.png" alt="">
+                    <img src="./assets/image/course3.png" alt="">
+                </div>
+                <div class="content">
+                    <h2 class="heding-lv2">Learner outcomes through our awesome platform</h2>
+                    <p class="desc">87% of people learning for professional development report career 
+                        benefits like getting a promotion, a raise, or starting a new career.</p>
+                    <p class="desc">Lesson Impact Report (2022)</p>
+                    <a href="#!" class="btn cta-btn">Sign Up</a>
+                </div>
+            </div>
+        </div>
+      </div>
+      <!-- blog -->
+       <div class="blogs">
+            <div class="main-content">
+                <div class="blog-top">
+                    <h2 class="heading-lv2">Our blog</h2>
+                    <p class="desc">Read our regular travel blog and know the latest update of tour and travel</p>
+                </div>
+                <div class="blog-list">
+                    <!-- item 1 -->
+                    <div class="item">
+                        <img src="./assets/image/course3.png" alt="" class="thumb">
+                        <span class="date">21 November 2021</span>
+                        <a href="#!"><h3 class="title">How to become a pro web designer in 2022 and get remot job?</h3></a>
+                        <a href="#!" class="btn btn-read-more">Read More</a>
+                    </div>
+                    <!-- item 2 -->
+                    <div class="item">
+                        <img src="./assets/image/course2.png" alt="" class="thumb">
+                        <span class="date">21 November 2021</span>
+                        <a href="#!"><h3 class="title">How to become a pro web designer in 2022 and get remot job?</h3></a>
+                        <a href="#!" class="btn btn-read-more">Read More</a>
+                    </div>
+                    <!-- item 3 -->
+                    <div class="item">
+                        <img src="./assets/image/course1.png" alt="" class="thumb">
+                        <span class="date">21 November 2021</span>
+                        <a href="#!"><h3 class="title">How to become a pro web designer in 2022 and get remot job?</h3></a>
+                        <a href="#!" class="btn btn-read-more">Read More</a>
+                    </div>
+                </div>
+            </div>
+       </div>
 </body>
 </html>
